newclay/test/Compiler/Propagation/Fail/WhileStatementNotAllBranchesReturn/main.clay
define main;
overload main() {
    while (true)
        return 1;
}
